# car-hunter

./: .coderabbit.yaml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json  plugin.json
.claude/loops/: tdd-cycle.md  verify.sh
.claude/rules/: config-driven-profiles.md  plugin-paths.md  skill-frontmatter.md  uk-english.md
.github/workflows/: test.yml
car-hunter/.claude-plugin/: plugin.json
car-hunter/commands/: setup-car.md  watch-car.md
car-hunter/scripts/: build_dashboard.py  dashboard_lib.py
car-hunter/scripts/templates/: dashboard.html
car-hunter/skills/car-search/: SKILL.md
car-hunter/skills/car-value-dashboard/: SKILL.md
car-hunter/skills/setup-car-profile/: SKILL.md
car_hunter_tests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
commands/: build-dashboard.md  search-cars.md  setup-car.md
docs/: car-profile-schema.md
profiles/: car-profile-schema.md
scripts/: build_dashboard.py  dashboard_lib.py
skills/car-search/: SKILL.md
skills/car-value-dashboard/: SKILL.md
skills/setup-car-profile/: SKILL.md
tests/: conftest.py
tests/coverage_support/: sitecustomize.py
tests/e2e/: test_build_dashboard_cli.py  test_html_structure.py
tests/fixtures/: acme-bolt-all-listings-2026-03-13.csv  acme-bolt-all-listings-2026-03-27.csv  acme-bolt-all-listings-2026-04-10.csv  acme-bolt-capture-2026-04-10.json  acme-bolt-listing-state.json  acme-bolt-listings.csv  acme-bolt-multigen.json  acme-bolt-sparse.csv  acme-bolt-watchlist.json  acme-bolt.json
tests/integration/: __init__.py  test_load_capture_manifest.py  test_load_csv.py  test_load_listing_state.py  test_load_snapshots.py  test_load_watchlist.py  test_regression_pipeline.py
tests/unit/: test_build_html_template.py  test_build_tier_features.py  test_compute_dep_curves.py  test_compute_pm_trend.py  test_compute_spec_premiums.py  test_enrich_rows.py  test_extract_listing_id.py  test_fit_poly2.py  test_js_safe.py  test_load_capture_manifest.py  test_load_csv.py  test_load_listing_state.py  test_load_watchlist.py  test_ols_regression.py  test_parse_listing_date.py  test_rolling_window.py  test_run_regression.py  test_snapshot_diff.py  test_spec_helpers.py  test_watchlist.py
