[project]
name = "car-hunter-tests"
version = "0.0.0"
description = "Test harness for the Car Hunter Claude Code plugin. Not shipped with the plugin."
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "coverage>=7",
    "beautifulsoup4>=4.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: fast, isolated tests of pure functions in dashboard_lib",
    "integration: tests that combine multiple lib functions against fixtures",
    "e2e: tests that invoke build_dashboard.py as a subprocess",
]

[tool.coverage.run]
source = ["car-hunter/scripts"]
# parallel + sigterm enable subprocess coverage: each spawned interpreter
# writes its own data file that `coverage combine` merges. data_file keeps
# those parallel files inside .coverage_cache/ so killed runs don't litter
# the repo root with .coverage.* leftovers.
data_file = ".coverage_cache/.coverage"
parallel = true
sigterm = true
omit = [
    "tests/*",
    "*/site-packages/*",
]

[tool.coverage.paths]
# Map subprocess-reported paths back to the canonical scripts/ dir so the
# combined report groups them correctly.
scripts = ["car-hunter/scripts", "*/car-hunter/scripts"]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"
